--- a/examples/index.html
+++ b/examples/index.html
@@ -64,7 +64,7 @@
                 <p>Sprint2 Demo</p>
               </a>
             </li>
-          <li class="nav-item ">
+          <!-- <li class="nav-item ">
             <a class="nav-link" href="./tables.html">
               <i class="material-icons">content_paste</i>
               <p>Table List</p>
@@ -105,7 +105,7 @@
               <i class="material-icons">unarchive</i>
               <p>Upgrade to PRO</p>
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
