final changes for styles

--- a/examples/user.html
+++ b/examples/user.html
@@ -28,13 +28,44 @@
         Tip 2: you can also add an image using data-image tag
     -->
       <div class="logo">
-        <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-          Creative Tim
+        <a href="index.html" class="simple-text logo-normal">
+          Sprint3
         </a>
       </div>
       <div class="sidebar-wrapper">
         <ul class="nav">
+            <li class="nav-item active ">
+                <a class="nav-link" href="./index.html">
+                  <i class="material-icons">content_paste</i>
+                  <p>User List</p>
+                </a>
+              </li>
           <li class="nav-item  ">
+            <a class="nav-link" href="./dashboard.html?id=1">
+              <i class="material-icons">dashboard</i>
+              <p>Dashboard</p>
+            </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="./user.html">
+              <i class="material-icons">person</i>
+              <p>User Profile</p>
+            </a>
+          </li>
+          <li class="nav-item ">
+              <a class="nav-link" href="/demo-fe/index.html">
+                <i class="material-icons">content_paste</i>
+                <p>Sprint1 Demo</p>
+              </a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="/demo-fe2/index.html">
+                <i class="material-icons">content_paste</i>
+                <p>Sprint2 Demo</p>
+              </a>
+            </li>
+
+          <!-- <li class="nav-item  ">
             <a class="nav-link" href="./dashboard.html">
               <i class="material-icons">dashboard</i>
               <p>Dashboard</p>
@@ -87,7 +118,7 @@
               <i class="material-icons">unarchive</i>
               <p>Upgrade to PRO</p>
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -270,7 +301,7 @@
       </div>
       <footer class="footer">
         <div class="container-fluid">
-          <nav class="float-left">
+          <!-- <nav class="float-left">
             <ul>
               <li>
                 <a href="https://www.creative-tim.com">
@@ -293,19 +324,19 @@
                 </a>
               </li>
             </ul>
-          </nav>
-          <div class="copyright float-right">
+          </nav> -->
+          <!-- <div class="copyright float-right">
             &copy;
             <script>
               document.write(new Date().getFullYear())
             </script>, made with <i class="material-icons">favorite</i> by
             <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
-          </div>
+          </div> -->
         </div>
       </footer>
     </div>
   </div>
-  <div class="fixed-plugin">
+  <!-- <div class="fixed-plugin">
     <div class="dropdown show-dropdown">
       <a href="#" data-toggle="dropdown">
         <i class="fa fa-cog fa-2x"> </i>
@@ -349,12 +380,12 @@
         <li class="button-container">
           <a href="https://www.creative-tim.com/product/material-dashboard" target="_blank" class="btn btn-primary btn-block">Free Download</a>
         </li>
-        <!-- <li class="header-title">Want more components?</li>
+         <li class="header-title">Want more components?</li>
             <li class="button-container">
                 <a href="https://www.creative-tim.com/product/material-dashboard-pro" target="_blank" class="btn btn-warning btn-block">
                   Get the pro version
                 </a>
-            </li> -->
+            </li> 
         <li class="button-container">
           <a href="https://demos.creative-tim.com/material-dashboard/docs/2.1/getting-started/introduction.html" target="_blank" class="btn btn-default btn-block">
             View Documentation
@@ -372,7 +403,7 @@
         </li>
       </ul>
     </div>
-  </div>
+  </div> -->
   <!--   Core JS Files   -->
   <script src="../assets/js/core/jquery.min.js"></script>
   <script src="../assets/js/core/popper.min.js"></script>
