added some notes functionality

--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -158,9 +158,9 @@
                   </p>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Mike John resolved issue #557-221</a>
+                  <a class="dropdown-item bg-info" href="#">Mike John resolved issue #557-221</a>
                   <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                  <a class="dropdown-item" href="#">3 files marked for escalation. </a>
+                  <a class="dropdown-item bg-warning" href="#">3 files marked for escalation. </a>
                   <a class="dropdown-item" href="#">Next Deletion Action Before - 3/4/20 </a>
                   <a class="dropdown-item" href="#">Another Important Note</a>
                 </div>
@@ -616,7 +616,7 @@
                                 </label>
                               </div>
                             </td>
-                            <td>2 Files marked for Delegation is ready to be Accepted</td>
+                            <td>2 Files marked for Delegation are ready to be Accepted</td>
                             <td class="td-actions text-right">
                               <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
                                 <i class="material-icons">edit</i>
