--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -121,7 +121,7 @@
       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
           <div class="navbar-wrapper">
-            <a id="user-name" class="navbar-brand" href="#pablo">Dashboard</a>
+            <h1><a id="user-name" class="navbar-brand" href="#pablo">Dashboard</a></h1>
           </div>
           
           <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -214,7 +214,7 @@
                         <i class="material-icons">content_copy</i>
                       </div>
                       <p class="card-category">Used Files</p>
-                      <h3 class="card-title"><span id="user-total"></span>
+                      <h3 class="card-title"><span id="user-total">...</span>
                         <small>Total</small>
                       </h3>
                     </div>
@@ -233,7 +233,7 @@
                         <i class="material-icons">file_copy</i>
                       </div>
                       <p class="card-category">Total Usage</p>
-                      <h3 class="card-title">495.9 MB</h3>
+                      <h3 class="card-title"><span id="user-total-usage">...</span> MB</h3>
                     </div>
                     <div class="card-footer">
                       <div class="stats">
@@ -271,7 +271,7 @@
                             <i class="material-icons">delete_forever</i>
                           </div>
                           <p class="card-category">Deletion Confirmed</p>
-                          <h3 class="card-title">15</h3>
+                          <h3 class="card-title"><span id="team-delete">...</span></h3>
                         </div>
                         <div class="card-footer">
                           <div class="stats">
@@ -287,7 +287,7 @@
                           <i class="material-icons">content_copy</i>
                         </div>
                         <p class="card-category">Files in Used </p>
-                        <h3 class="card-title">1255
+                        <h3 class="card-title"><span id="team-files-used">...</span>
                           <small>Total</small>
                         </h3>
                       </div>
@@ -306,7 +306,7 @@
                           <i class="material-icons">file_copy</i>
                         </div>
                         <p class="card-category">Team Totals</p>
-                        <h3 class="card-title">34,245</h3>
+                        <h3 class="card-title"><span id="team-files-total">...</span></h3>
                       </div>
                       <div class="card-footer">
                         <div class="stats">
@@ -323,7 +323,7 @@
                           <i class="fa fa-archive"></i>
                         </div>
                         <p class="card-category">Team Escalations</p>
-                        <h3 class="card-title">45</h3>
+                        <h3 class="card-title"><span id="team-escalate">...</span></h3>
                       </div>
                       <div class="card-footer">
                         <div class="stats">
@@ -882,7 +882,7 @@
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <button id="save-note-btn" onclick="addFileNotetoLS(this)" value="" type="button" class="btn btn-primary">Save changes</button>
             </div>
-            <div id="file-note-history">
+            <div class="container" id="file-note-history">
 
             </div>
           </div>
