added animated gif, corrected localstorage for all 3 demo's to co-exist

--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -71,48 +71,6 @@
               <p>Sprint2 Demo</p>
             </a>
           </li>
-          <!-- <li class="nav-item ">
-            <a class="nav-link" href="./tables.html">
-              <i class="material-icons">content_paste</i>
-              <p>Table List</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./typography.html">
-              <i class="material-icons">library_books</i>
-              <p>Typography</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./icons.html">
-              <i class="material-icons">bubble_chart</i>
-              <p>Icons</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./map.html">
-              <i class="material-icons">location_ons</i>
-              <p>Maps</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./notifications.html">
-              <i class="material-icons">notifications</i>
-              <p>Notifications</p>
-            </a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./rtl.html">
-              <i class="material-icons">language</i>
-              <p>RTL Support</p>
-            </a>
-          </li>
-          <li class="nav-item active-pro ">
-            <a class="nav-link" href="./upgrade.html">
-              <i class="material-icons">unarchive</i>
-             
-            </a>
-          </li> -->
         </ul>
       </div>
     </div>
@@ -233,7 +191,7 @@
                         <i class="material-icons">file_copy</i>
                       </div>
                       <p class="card-category">Total Usage</p>
-                      <h3 class="card-title"><span id="user-total-usage">...</span> MB</h3>
+                      <h3 class="card-title"><span id="user-total-usage">...</span></h3>
                     </div>
                     <div class="card-footer">
                       <div class="stats">
@@ -286,9 +244,9 @@
                         <div class="card-icon">
                           <i class="material-icons">content_copy</i>
                         </div>
-                        <p class="card-category">Files in Used </p>
+                        <p class="card-category">Total Files in Used </p>
                         <h3 class="card-title"><span id="team-files-used">...</span>
-                          <small>Total</small>
+                          <small></small>
                         </h3>
                       </div>
                       <div class="card-footer">
@@ -854,14 +812,14 @@
             <div class="modal-body">
             <form>
             <div class="form-group">
-              <label for="exampleFormControlInput1">File Note for <span id="file-note-md5"></span></label>
-              <label for="exampleFormControlInput1">File Path <span id="file-note-path"></span></label><br>
-              <label for="exampleFormControlInput1">Filename <span id="file-note-name"></span></label><br>
+              <label for="exampleFormControlInput1">MD5 : <span id="file-note-md5"></span></label>
+              <label for="exampleFormControlInput1">File Path : <span id="file-note-path"></span></label><br>
+              <label for="exampleFormControlInput1">Filename : <span id="file-note-name"></span></label><br>
               <label for="exampleFormControlInput1">Classification : <span id="file-note-class"></span></label><br>
               <label for="exampleFormControlInput1">Security : <span id="file-note-sec"></span></label><br>
               <label for="exampleFormControlInput1">Extension : <span id="file-note-ext"></span></label><br>
               <label for="exampleFormControlInput1">Business Class : <span id="file-note-busclass"></span></label><br>
-              <label for="exampleFormControlInput1">Last Access <span id="file-note-access"></span></label><br>
+              <label for="exampleFormControlInput1">Last Access : <span id="file-note-access"></span></label><br>
               <label for="exampleFormControlInput1">Email : <span id="file-note-email"></span></label><br>
               <label for="exampleFormControlInput1">FileSize : <span id="file-note-size"></span></label><br>
              
